fix refreal and level and challenge